# bratPy

./: .gitignore  Makefile  README.md  example.txt  pyproject.toml  script.py  streamlit.py  text.txt
notebooks/: fuzzy_matching.ipynb
