[project]
name = "bratpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzysearch>=0.7.3",
    "pydantic>=2.10.6",
    "rapidfuzz>=3.12.1",
    "ruff>=0.9.4",
    "seaborn>=0.13.2",
    "streamlit>=1.42.0",
    "streamlit-aggrid>=1.1.0",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
]
